<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a5a2a2"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/rogueButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#FF5722"
        android:text="@string/rogue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.275" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="359dp"
        android:layout_height="155dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="26dp"
        android:background="#FFFFFF"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/beginning"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/rangerButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/ranger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rogueButton"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/bardButton"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.275" />

    <Button
        android:id="@+id/bardButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="#B950D1"
        android:text="@string/bard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.275" />

</androidx.constraintlayout.widget.ConstraintLayout>