<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5A2A2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="165dp"
        android:layout_height="152dp"
        android:layout_marginStart="123dp"
        android:layout_marginEnd="123dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07"
        tools:srcCompat="@drawable/bard" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="285dp"
        android:layout_height="246dp"
        android:background="#FFFFFF"
        android:padding="20px"
        android:text="@string/bardStart"
        android:textAlignment="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.17" />

    <Button
        android:id="@+id/button"
        android:layout_width="135dp"
        android:layout_height="81dp"
        android:layout_marginStart="72dp"
        android:backgroundTint="#B950D1"
        android:text="@string/bardOption1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.396" />

    <Button
        android:id="@+id/button3"
        android:layout_width="135dp"
        android:layout_height="80dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#B950D1"
        android:text="@string/bardOption2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.396" />

</androidx.constraintlayout.widget.ConstraintLayout>